# chalk-lang

./: README.md  ast_nodes.py  codegen.py  grammar.lark  lexer.py  lexer.rb  main.py  pyproject.toml  semantic.py  test.py  token.rb  token_type.rb  transformer.py
examples/: 01_variables.ch  02_arithmetic.ch  03_conditions.ch  04_while.ch  05_functions.ch  06_comparisons.ch  07_negation.ch  08_full_program.ch  hello.ch  main.ch  test.sf
