[project]
name = "chalk-lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ruff",
  "lark"
]

[tool.setuptools]
py-modules = ["ast_nodes", "codegen", "lexer", "main", "semantic", "transformer"]

[project.scripts]
chalk = "main:main"
